[package]
name = "rust_os"
version = "0.1.0"
authors = ["ed <bodunhu@utexas.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.3"

# Disable stack unwinding
[profile.dev]
panic = "abort"

# Disable stack unwinding
[profile.release]
panic = "abort"
